components/fia-api/envs/staging/fia-api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fia-api
  namespace: fia
spec:
  template:
    spec:
      containers:
        - name: fia-api
          image: ghcr.io/fiaisis/fia-api@sha256:5589e922bbf98690399709c2fd7995d7501a7ad78a2e9be62fcf3f9dc38065ec
